--- a/.pylintrc
+++ b/.pylintrc
@@ -28,7 +28,7 @@ limit-inference-results=100
 
 # List of plugins (as comma separated values of python module names) to load,
 # usually to register additional checkers.
-load-plugins=pylint_forbidden_imports
+load-plugins=pylint_forbidden_imports,pylint-pytest
 
 # Pickle collected data for later comparisons.
 persistent=yes
